K8s/platforms-node-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: platformservice-srv
spec:
  type: NodePort
  # NodePort specifies that this service should be of type NodePort, 
  # which means it will be accessible externally on a specific port on each node in the cluster.
  selector:
    app: platformservice
  ports:
    - name: platformservice
      protocol: TCP
      port: 8080
      targetPort: 8080
