K8s/ingress-srv.yaml
# apiVersion: networking.k8s.io/v1
# king: Ingress
# metadata:
#   name: ingress-srv
#   annotations:
#     kubernetes.io/ingress.class: nginx
#     nginx.ingress.kubernetes.io/use-regex: 'true'
# spec:
#   rules:
#     - hosts: acme.com
#       http:
#         paths:
#           - path: /api/platform
#             pathType: Prefix
#             backend:
#               service:
#                 name: platforms-clusterip-srv
#                 port: 8080
#           - path: /api/command/platform
#             pathType: Prefix
#             backend:
#               service:
#                 name: command-clusterip-srv
#                 port: 8080


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: acme.com
      http:
        paths:
          - path: /api/platform
            pathType: Prefix
            backend:
              service:
                name: platforms-clusterip-srv
                port:
                  number: 8080
          - path: /api/command/platform
            pathType: Prefix
            backend:
              service:
                name: command-clusterip-srv
                port:
                  number: 8080
